--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "fractal-react-adapter",
+  "name": "@mwinche/fractal-react-adapter",
   "version": "1.0.2",
   "description": "Use React as the template engine for Fractal components.",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sumul/fractal-react-adapter.git"
+    "url": "git+https://github.com/mwinche/fractal-react-adapter.git"
   },
   "keywords": [
     "fractal",
@@ -14,9 +14,9 @@
   "author": "Sumul Shah <sumul@sumulshah.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/sumul/fractal-react-adapter/issues"
+    "url": "https://github.com/mwinche/fractal-react-adapter/issues"
   },
-  "homepage": "https://github.com/sumul/fractal-react-adapter#readme",
+  "homepage": "https://github.com/mwinche/fractal-react-adapter#readme",
   "dependencies": {
     "@babel/register": "^7.0.0-beta.44",
     "@frctl/fractal": "^1.1.3",
